--- a/Front-End/src/App.css
+++ b/Front-End/src/App.css
@@ -1,3 +1,10 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* tuoi stili custom (facoltativi) qui sotto … */
+
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
